@@ -39,14 +39,30 @@ To remove a condition, choose '%s' from the drop-down list.", $selectPrompt); ?>
     <ul>
     <?php foreach ($condition as $c) : ?>
         <li class="selfclear">
+        <?php if (isset($c->caption)): ?><div ><b><?php echo $c->caption; ?></b></div><?php endif; ?>
         <div class="segment-block"><?php echo $c->fieldList, $c->hiddenField; ?></div>
-        <div class="segment-block"><?php echo $c->operatorList; ?></div>
-        <div class="segment-block"><?php echo $c->display; ?></div>
+        <div class="segment-block"><?php if (isset($c->operatorList)) echo $c->operatorList; ?></div>
+        <div class="segment-block"><?php if (isset($c->display)) echo $c->display; ?></div>
         </li>
     <?php endforeach; ?>
     </ul>
+    <div><?php echo s("Use a saved segment. This will replace any conditions already entered."); ?></div>
+    <?php echo $savedList; ?>
     <div id="recalculate">
         <?php echo $calculateButton ?>
         <?php if (isset($totalSubscribers)) echo s('%d subscribers will be selected', $totalSubscribers); ?>
+    </div>
+    <?php if (isset($saveButton)): ?>
+    <div>Save the current segment (set of conditions).</div>
+    <div class="segment-block">
+        <?php echo $saveName; ?>
+    </div>
+    <div class="segment-block">
+        <?php echo $saveButton; ?>
+    </div>
+    <?php endif; ?>
+    <div class="segment-block">
+        <?php echo $settings; ?>
+        <a href="https://resources.phplist.com/plugin/segment#add_segment_conditions" target="_blank">Guidance on usage</a>
     </div>
 </div>
